# learncpp_quizzes

./: .gitignore  CMakeLists.txt
include/: quiz1.h  quiz2.h  quiz4.h  quiz5.h  quiz6.h  quiz7.h  quiz8.h  quiz_registry.h
src/: main.cpp  quiz1.cpp  quiz2.cpp  quiz4.cpp  quiz5.cpp  quiz6.cpp  quiz7.cpp  quiz8.cpp
